--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -19,8 +19,9 @@
 
 {% block content %}
   <main id="main-content" tabindex="-1">
-    {% include "partials/components/intro.njk" %}
-    {% include "partials/components/post-list.njk" %}
-    {% include "partials/components/pagination.njk" %}
+    <div class="home-container">
+        {% include "partials/components/post-list.njk" %}
+        {% include "partials/components/pagination.njk" %}
+    </div>
   </main>
 {% endblock %}
