--- a/src/_includes/partials/components/nav.njk
+++ b/src/_includes/partials/components/nav.njk
@@ -1,6 +1,9 @@
 {% if navigation.items %}
   <nav class="nav">
     <ul class="[ nav__list ] [ box-flex align-center md:space-before ]">
+          <a href="/" class="link nav-item"{{ 'aria-current=page' if page.url == '/' | safe }}>
+        <span class="visually-hidden">{{ 'Back to homepage' if page.url != '/' else 'Homepage' }}</span>
+      </a>
       {% for item in navigation.items %}
         {% set relAttribute = '' %}
         {% set currentAttribute = '' %}
@@ -13,9 +16,7 @@
           {% set currentAttribute = ' aria-current="page"' %}
         {% endif %}
 
-        <li class="nav__item">
-          <a href="{{ item.url }}"{{ relAttribute | safe }}{{ currentAttribute | safe }}>{{ item.text }}</a>
-        </li>
+          <a href="{{ item.url }}" class="link nav-item"{{ relAttribute | safe }}{{ currentAttribute | safe }}>{{ item.text }}</a>
       {% endfor %}
     </ul>
   </nav>
