--- a/src/_includes/partials/components/post-list.njk
+++ b/src/_includes/partials/components/post-list.njk
@@ -6,7 +6,7 @@
           {% if item.date.getTime() <= global.now %}
             <div class="post-list__item wrapper">
               <div class="post-list__item left-2 wrapped-item">
-                <img class"post-image" src="{{ item.data.fImg }}"/>
+                <img class"post-image" src="{{ item.data.featureimage }}"/>
                 image
               </div>
               <div class="post-list__item right-1 wrapped-item">
