Added an about me page it actually doesnt look like trash anymore

--- a/src/_includes/partials/components/post-list.njk
+++ b/src/_includes/partials/components/post-list.njk
@@ -8,7 +8,7 @@
               <div class="post-list__item left-2 wrapped-item">
                 <img src="{{ item.data.featureimage }}" class"post-image" />
               </div>
-              <div class="post-list__item right-1 wrapped-item">
+              <div class="post-list__item right-1 pad-5p wrapped-item">
                 <p class="post-sub-title text-500 gap-top-300">{{ item.data.maintag }}</p>
                 <h3 class="h3-post-title">
                   <a href="{{ item.url }}" class="link post-title" rel="bookmark">{{ item.data.title }}</a>
