--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -16,18 +16,26 @@
   <main id="main-content" tabindex="-1">
     <article class="[ post ] [ h-entry ]">
       {% include "partials/components/intro.njk" %}
-      <div class="[ post__body ] [ inner-wrapper ] [ leading-loose pad-top-900 {{ 'pad-bottom-900' if not site.enableThirdPartyComments }} text-500 ] [ sf-flow ] [ e-content ]">
-        {{ content | safe }}
+      <div class="inner-wrapper">
+          {% for section in allcontent %}
+            <div class="three-col">
+              <p class="post-sub-text">
+                      <h3>{{ section.title | safe }}</h3>
+                      <h4>{{ section.subtitle }}</h4>
+                      {{ section.textcontent | safe }}
+              </p>
+          </div>
+          {% endfor %}
       </div>
       {% if tags %}
         <footer class="[ post__footer ] [ pad-top-500 pad-bottom-500 ]">
           <div class="inner-wrapper">
             <div class="[ nav ] [ box-flex align-center ]">
-              <h2 class="font-base text-600 weight-mid">Filed under</h2>
-              <ul class="[ nav__list ] [ box-flex align-center pad-left-400 ] [ p-category ]">
+              <h4 class="font-base text-600 weight-mid">Filed under</h4>
+              <ul class="tags-list">
                 {% for item in tags %}
                   <li class="nav__item">
-                    <a href="/tags/{{ item }}">{{ item }}</a>
+                    <a href="/tags/{{ item }}" class="link">{{ item }}</a>
                   </li>
                 {% endfor %}
               </ul>
