--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -48,7 +48,7 @@ header[role="banner"] {
 
 .post-list__item {
     margin-bottom: 2em;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 .post-list__item > img {
@@ -118,6 +118,10 @@ a.text-button {
 }
 
 .inner-wrapper {
+    margin-bottom: 2em;
+}
+
+.special-page.bottom {
     margin-bottom: 2em;
 }
 
