--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -20,6 +20,14 @@
             <img src="/{{ featureimage }}" class"post-image" />
           </div>
           <div class="post-list__item right-1 wrapped-item">
+              <div class="post-list__item wrapped-item">
+                <p class="post-sub-title text-500 gap-top-300">{{ maintag }}</p>
+                <h3 class="h3-post-title">
+                  <a href="{{ item.url }}" class="link post-title" rel="bookmark">{{ title }}</a>
+                </h3>
+                <p class="post-caption">{{ challenge }}</p> 
+                <p class="post-sub-text">{{ whatstatement }}</p> 
+              </div>
               {% for section in allcontent %}
                 <h3 class="h3-post-title">
                     {{ section.title | safe }}
