--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -199,9 +199,9 @@ a.text-button {
 }
 
 .title-highlight {
-    background-color: #a7a7a78c;
+    background-color: #AB9535;
     margin-bottom: 1em;
-    padding: 10px;
+    padding: 14px;
 }
 
  .feature-list.text {
