--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -28,7 +28,7 @@
                 <div class="intro-top-right">
                     <h1 class="post-sub-title text-500 gap-top-300">{{ aboutme.job }}</h1>
                     <h2 class="intro-title">
-                        <a href="{{ item.url }}" class="link post-title" rel="bookmark">{{ aboutme.name }}</a>
+                        <div class="link post-title" rel="bookmark">{{ aboutme.name }}</a>
                     </h2>
                     <h3 class="intro-caption">{{ aboutme.blurb | safe }}</h3> 
                         <div class="intro-icon">
