--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -53,6 +53,8 @@ header[role="banner"] {
 
 .post-list__item > img {
     width: 90% !important;
+    height: 20em;
+    object-fit: cover;
 }
 
 img {
@@ -335,6 +337,12 @@ img.cs-image {
     font-size: 4rem;
 }
 
+@media only screen and (max-width: 974px) {
+    img.cs-image {
+        width: 80%;
+    }
+}
+
 @media only screen and (max-width: 930px) {
     .post-list__item {
         display: block!important;
@@ -353,10 +361,98 @@ img.cs-image {
     .three-col {
         width: 45%!important;
     }
+
+    .cs-box-left {
+        width: 100%;
+    }
+
+    .cs-box-right {
+        display: block;
+        width: 100%;
+        margin-top: 1em;
+    }
+
+    img.cs-image {
+        width: 100%;
+        height: 30vh!important;
+        object-fit: cover;
+    }
+
+    .cs-box-metrics {
+        margin: 0;
+        display: inline-block;
+        width: 48%;
+        vertical-align: top;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .cs-title, 
+    .cs-metric-title {
+        font-size: 3rem;
+    }
+
 }
 
 @media only screen and (max-width: 600px) {
     .three-col {
         width: 100%!important;
+    }
+
+    .home-container {
+        margin: 0;
+    }
+
+    .intro-top-right {
+        width: 100%;
+        display: block;
+        margin-top: 1em;
+    }
+
+    .intro-top-container {
+        margin-bottom: 2rem;
+    }
+
+    .feature-list-btn {
+        width: 100%;
+        margin-right: 1rem;
+        height: 18rem;
+        margin-bottom: 1rem;
+        display: block;
+    }
+
+    .cs-title, 
+    .cs-metric-title {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    a.link {
+        display: block;
+        font-size: 1.5em;
+    }
+}
+
+@media only screen and (max-width: 530px) {
+
+    body {
+        margin: 1em 1em 0 1em;
+        padding: 1em;
+    }
+
+    .cs-box-metrics {
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+
+    .cs-metric-title {
+        margin-bottom: 0;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    body {
+        margin: 5px 0 0 0;
+        padding: 10px;
     }
 }
