--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -427,10 +427,21 @@ img.cs-image {
         margin-bottom: 1rem;
     }
 
-    a.link {
+    .wrapped-item {
+        width: 100%;
+    }
+
+    nav a.link {
+        width: 100%;
+        text-align: center;
+        background-color: #3f4980;
+        margin-bottom: 8px;
+        color: white;
+        padding: 3px 0;
         display: block;
         font-size: 1.5em;
     }
+
 }
 
 @media only screen and (max-width: 530px) {
@@ -478,17 +489,5 @@ img.cs-image {
     .overlay-content {
         padding: 5% 4%;
     }
-
-    .wrapped-item {
-        width: 100%;
-    }
-
-    a.link {
-        width: 100%;
-        text-align: center;
-        background-color: #3f4980;
-        margin-bottom: 8px;
-        color: white;
-        padding: 3px 0;
-    }
+    
 }
