Added mobile friendly nav

--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -10,6 +10,12 @@ html {
     background-image: url("images/melbourne.jpg");
     background-repeat: no-repeat;
     background-attachment:fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 main#main-content:focus {
@@ -44,6 +50,10 @@ header[role="banner"] {
 
 .nav-item {
     margin-right: 2em;
+}
+
+#mobile-nav-button > input {
+    display: none;
 }
 
 .post-list__item {
@@ -337,6 +347,12 @@ img.cs-image {
     font-size: 4rem;
 }
 
+@media only screen and (max-width: 1000px) {
+    .feature-list-btn {
+        width: 100%;
+    }
+}
+
 @media only screen and (max-width: 974px) {
     img.cs-image {
         width: 80%;
@@ -386,6 +402,22 @@ img.cs-image {
     }
 }
 
+@media only screen and (max-width: 900px) {
+    .intro-top-right {
+        width: 40%;
+    }
+
+    .home-container {
+        margin: 5rem 0;
+    }
+}
+
+@media only screen and (max-width: 830px) {
+    .intro-top-right {
+        width: 100%;
+    }
+}
+
 @media only screen and (max-width: 800px) {
     .cs-title, 
     .cs-metric-title {
@@ -431,17 +463,6 @@ img.cs-image {
         width: 100%;
     }
 
-    nav a.link {
-        width: 100%;
-        text-align: center;
-        background-color: #3f4980;
-        margin-bottom: 8px;
-        color: white;
-        padding: 3px 0;
-        display: block;
-        font-size: 1.5em;
-    }
-
 }
 
 @media only screen and (max-width: 530px) {
@@ -480,7 +501,108 @@ img.cs-image {
     }
 }
 
+@media only screen and (max-width: 450px) {
+    nav {
+        background-color: #1e1e23;
+        height: 65px;
+      }
+
+    #mobile-nav-button {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        top: 25px;
+        left: 25px;
+        z-index: 1;
+        -webkit-user-select: none;
+        user-select: none;
+      }
+
+
+    #mobile-nav-button input {
+        display: flex;
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 2;
+    }
+    
+    #mobile-nav-button span.btn {
+        display: flex;
+        width: 29px;
+        height: 2px;
+        margin-bottom: 5px;
+        position: relative;
+        background: #ffffff;
+        border-radius: 3px;
+        z-index: 1;
+        transform-origin: 5px 0px;
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+    }
+    
+    #mobile-nav-button span.btn:first-child {
+        transform-origin: 0% 0%;
+    }
+    
+    #mobile-nav-button span.btn:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+    
+    #mobile-nav-button input:checked ~ span.btn {
+        opacity: 1;
+        transform: rotate(45deg) translate(-3px, -1px);
+        background: #36383f;
+    }
+    #mobile-nav-button input:checked ~ span.btn:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+    }
+    
+    #mobile-nav-button input:checked ~ span.btn:nth-last-child(2) {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+    
+    ul.nav_list {
+        position: absolute;
+        width: 250px;
+        height: 300px;
+        box-shadow: 0 0 10px #85888c;
+        margin: -50px 0 0 -50px;
+        padding: 50px;
+        padding-top: 125px;
+        background-color: #f5f6fa;
+        -webkit-font-smoothing: antialiased;
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    }
+    
+    ul.nav_list li {
+        padding: 10px 0;
+        transition-delay: 2s;
+    }
+
+    #mobile-nav-button input:checked ~ ul {
+        transform: none;
+      }
+
+    .wrapped-item nav {
+        font-size: 1.5rem;
+    }
+      
+}
+
 @media only screen and (max-width: 400px) {
+    .intro-top-left > img {
+        width: 10rem;
+        height: 10rem;
+    }
+}
+
+@media only screen and (max-width: 30px) {
     body {
         margin: 5px 0 0 0;
         padding: 10px;
