--- a/src/_includes/layouts/casestudies.njk
+++ b/src/_includes/layouts/casestudies.njk
@@ -19,7 +19,7 @@
 
 {% block content %}
   <main id="main-content" tabindex="-1">
-    <div class="home-container">
+    <div class="case-studies-container">
         {% include "partials/components/post-list.njk" %}
         {% include "partials/components/pagination.njk" %}
     </div>
