--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -22,8 +22,14 @@
     <div class="home-container">
         <div class="intro-top-container">
             <div class="intro-top-wrapper">
-                <div class="intro-top-left">
+                <div class="intro-top-left wobble-hor-bottom con-animate">
                     <img src="/images/me.jpg" class"intro-image" />
+                        <div class="confetti"></div>
+                        <div class="confetti"></div>
+                        <div class="confetti"></div>
+                        <div class="confetti"></div>
+                        <div class="confetti"></div>
+                        <div class="confetti"></div>
                 </div>
                 <div class="intro-top-right">
                     <h1 class="post-sub-title text-500 gap-top-300">{{ aboutme.job }}</h1>
