Added see my work texxt

--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -37,7 +37,11 @@
                         <div class="link post-title" rel="bookmark">{{ aboutme.name }}</a>
                     </h2>
                     <h3 class="intro-caption">{{ aboutme.blurb | safe }}</h3> 
+                    
+                    
                         <div class="intro-icon">
+                        <p>See my featured work below</p>
+                        <br>
                             <a href="#featured-case-studies"> {% include "icons/arrow-down.svg" %}</a>
                         </div>
                 </div>
