--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -137,6 +137,12 @@ a.text-button {
     vertical-align: top;
 }
 
+/* More Page */
+.ff {
+    margin-top: 5em;
+    color: #474747;
+}
+
 /* Homepage Button Text */
 
 .inner-wrapper {
