--- a/src/_includes/partials/components/skills-section.njk
+++ b/src/_includes/partials/components/skills-section.njk
@@ -3,17 +3,20 @@
     <article class="[ post ] [ h-entry ]">
       <div class"special-page top">
         <div class="post-list__item wrapper">
+        <div class="skills-sec">
             <h3 class="h3-post-title">
                 {{ skills.title }}
             </h3>
             {% for skillset in skills.skillssection %}
-            <div class="three-col">
-                <p class="post-sub-text">
-                        <h4>{{ skillset.skillsubtitle | safe }}</h4>
-                        {{ skillset.skillslist | safe }}
-                </p>
-            </div>
+              <div class="three-col">
+                  <p class="post-sub-text">
+                          <h4>{{ skillset.skillsubtitle | safe }}</h4>
+                          {{ skillset.skillslist | safe }}
+                  </p>
+              </div>
             {% endfor %}
+            </div>
+            <img src="/uploads/all-rounder.png" class="full-image" />
         </div>
       </div>
     </article>
